--- a/style.css
+++ b/style.css
@@ -13,8 +13,17 @@
   box-sizing: border-box;
 }
 
+h5 {
+  text-align: center;
+  margin-top: 40px;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: -0.194444px;
+  color: #5b5e7e;
+}
+
 body.dark {
-  --light: #000;
+  --light: #171823;
   --dark: #fff;
   --border-item: #393a4b;
   --card-bg: #25273d;
@@ -33,12 +42,45 @@ body.dark {
 
 body {
   font-family: "Josefin Sans", "Outfit", sans-serif;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: var(--light);
   color: var(--dark);
+}
+
+.backFon,
+.backFonDark {
+  background-image: url(./images/Bitmap.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+}
+
+.backFonDark {
+  background-image: url(./images/darkbg.png);
+}
+
+.backFon-text {
+  margin-top: 80px;
+  width: 530px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.backFon-text i {
+  font-size: 26px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.backFon-text h1 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 15px;
+  color: #ffffff;
+  text-transform: uppercase;
 }
 
 form {
@@ -55,8 +97,6 @@ form {
 
 .card {
   overflow-y: auto;
-  z-index: 999;
-  position: relative;
   background: var(--card-bg);
   box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
   border-top-left-radius: 5px;
@@ -65,10 +105,9 @@ form {
   height: 350px;
 }
 
-.card-bottom {
+.card-bottom,
+.card-bottom-sm {
   display: flex;
-  position: relative;
-  z-index: 9999;
   width: 540px;
   background: var(--card-bg);
   box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
@@ -133,6 +172,7 @@ input[type="text"] {
   color: #9495a5;
   font-size: 18px;
   background: var(--card-bg);
+  width: 100%;
 }
 
 input[type="checkbox"] {
@@ -144,10 +184,16 @@ input[type="checkbox"] {
 }
 
 .todo {
+  margin-top: -130px;
   font-weight: 400;
   font-size: 18px;
   line-height: 18px;
   letter-spacing: -0.25px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 input[type="checkbox"] {
@@ -194,11 +240,7 @@ input[type="checkbox"] {
   color: #c8cbe7;
 }
 
-.show {
-  display: block;
-}
-
-.hide {
+.card-bottom-sm {
   display: none;
 }
 
@@ -207,14 +249,57 @@ input[type="checkbox"] {
     display: none;
   }
 
+  .card-bottom-sm {
+    display: block;
+  }
+
   .card-bottom,
-  .top,
+  .backFon-text,
   .card,
+  .card-bottom-sm,
   .new-todo {
     width: 327px;
   }
 
   .filter {
-    margin-left: 20px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 19px;
   }
+
+  .filter span {
+    margin: 0;
+  }
+
+  .card-bottom {
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 281px) {
+  .card-bottom,
+  .backFon-text,
+  .card,
+  .new-todo,
+  .card-bottom-sm {
+    width: 270px;
+  }
+}
+
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
