--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ li:hover .delete {
 }
 
 li {
+  cursor: pointer;
   list-style-type: none;
   display: flex;
   align-items: center;
@@ -194,11 +195,6 @@ input[type="checkbox"] {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-}
-
-input[type="checkbox"] {
-  background-color: red !important;
-  color: white;
 }
 
 .top {
@@ -291,15 +287,61 @@ input[type="checkbox"] {
   }
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 5px;
 }
 
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+::-webkit-scrollbar-thumb {
+  background: #777;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #777;
+}
+
+/* .badge {
+  position: relative;
+} */
+
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+  border: 1px solid #e3e4f1;
+  background: #fff;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  border-radius: 50%;
+  display: grid;
+  place-content: center;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+  background-color: #fff;
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+input[type="checkbox"]:checked {
+  border: none;
+  background: linear-gradient(135deg, #55ddff 0%, #c058f3 100%);
 }
